--- a/movies.html
+++ b/movies.html
@@ -22,6 +22,18 @@
     <header>
         <h1 class="font-mono text-center text-4xl text-[#6D38E0] font-bold p-10 bg-[#D2CCFF]" >Movies</h1>
     </header>
+    <search class="flex flex-wrap gap-5 justify-center bg-[#edeaff]">
+        <div class="w-3/4 flex justify-center relative">
+            <input id="inputBusqueda" class="w-full h-9 rounded text-black p-2 m-2 "  placeholder="Enter title..." type="text">
+            <img class="h-6 absolute right-3 top-3" src="./assets/img/buscar.png" alt="">
+        </div>
+        <div class="flex flex-wrap gap-5 justify-center m-2" >
+            <select name="" id="contenedorChecks">
+                
+            </select>
+        </div>
+    </search>
+
     <main id="contenedor-main" class="grow p-3 flex flex-wrap gap-5 justify-center">
         
     </main>
