add footer, style and home page content

--- a/index.html
+++ b/index.html
@@ -16,14 +16,41 @@
         <nav class="flex items-center w-4/12 justify-center">
             <a class="p-2 border border-black rounded-md m-1.5 font-bold bg-[#D2CCFF] " href="#">Home</a>
             <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="./movies.html">Movies</a>
-            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="">Favs</a>
+            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="./favs.html">Favs</a>
         </nav>
     </div>
     <header>
-        <img class="w-full " src="./assets/img/banner.jpg" alt="">
+        <img class="w-full " src="./assets/img/banner.png" alt="">
     </header>
     <main>
-        <p class="p-10"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque commodi, vitae aliquam officiis necessitatibus sunt tempore iusto error dolorem ad explicabo veniam eveniet, inventore animi ducimus, reprehenderit natus laborum quae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque commodi, vitae aliquam officiis necessitatibus sunt tempore iusto error dolorem ad explicabo veniam eveniet, inventore animi ducimus, reprehenderit natus laborum quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque commodi, vitae aliquam officiis necessitatibus sunt tempore iusto error dolorem ad explicabo veniam eveniet, inventore animi ducimus, reprehenderit natus laborum quae. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque commodi, vitae aliquam officiis necessitatibus sunt tempore iusto error dolorem ad explicabo veniam eveniet, inventore animi ducimus, reprehenderit natus laborum quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque commodi, vitae aliquam officiis necessitatibus sunt tempore iusto error dolorem ad explicabo veniam eveniet, inventore animi ducimus, reprehenderit natus laborum quae. </p>
+        <h1 class="p-10 text-3xl text-indigo-900 font-extrabold"> Welcome to Moviestack! </h1>
+
+        <p class="px-10">Where each film is an unforgettable experience. At Moviestack, we are passionate about taking the seventh art to another level, offering a carefully curated selection of films that will transport you to unimaginable worlds.</p>
+
+        <p class="px-10">Discover our extensive catalog that ranges from the most recent blockbusters to independent cinema gems. At Moviestack, we believe that movies are for everyone, so you'll find options to suit all tastes and ages.</p>
+
+        <p class="px-10">Immerse yourself in the magic of cinema in our theaters equipped with the latest technology in projection and sound, guaranteeing an incomparable visual and auditory experience. Our cozy atmosphere and delicious snack and drink options will make your visit even more pleasant.</p>
+
+        <p class="px-10">Stay tuned for our weekly premieres and special events that will make every visit to Moviestack unique and exciting.</p>
+
+        <p class="px-10 font-semibold mb-5">Come join us at Moviestack, where the excitement never ends and every movie is an adventure! </p>
+
+        <div class="flex justify-center bg-[#edeaff]">
+            <div class="m-10 ">
+                <a href="./movies.html"><img src="./assets/img/See_movies.gif" alt="" srcset=""></a>
+            </div>
+            <div class="m-10 ">
+                <a href="./favs.html"><img src="./assets/img/See_favs.gif" alt="" srcset=""></a>
+            </div>
+        </div>
     </main>
+    <footer class="flex flex-col items-center pb-5 bg-[#d2ccff]">
+        <nav class=" p-5 flex flex-col items-center">
+            <a class="font-bold" href="#">Home</a>
+            <a class="font-medium hover:font-bold" href="./movies.html">Movies</a>
+            <a class="font-medium hover:font-bold" href="./favs.html">Favs</a>
+        </nav>
+        <p> ©2024 • Moviestack Cinema - <a class="hover:font-bold" href="https://www.linkedin.com/in/lisandrocorrales/">Web Design</a> </p>
+    </footer>
 </body>
 </html>
