--- a/movies.html
+++ b/movies.html
@@ -16,7 +16,7 @@
         <nav class="flex items-center w-4/12 justify-center">
             <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="./index.html">Home</a>
             <a class="p-2 border border-black rounded-md m-1.5 font-bold bg-[#D2CCFF]" href="#">Movies</a>
-            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="">Favs</a>
+            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="./favs.html">Favs</a>
         </nav>
     </div>
     <header>
@@ -38,9 +38,17 @@
         
     </main>
 
+    <footer class="flex flex-col items-center pb-5 bg-[#d2ccff]">
+        <nav class=" p-5 flex flex-col items-center">
+            <a class="font-medium hover:font-bold" href="./index.html">Home</a>
+            <a class="font-bold" href="#">Movies</a>
+            <a class="font-medium hover:font-bold" href="./favs.html">Favs</a>
+        </nav>
+        <p> ©2024 • Moviestack Cinema - <a class="hover:font-bold" href="https://www.linkedin.com/in/lisandrocorrales/">Web Design</a> </p>
+    </footer>
 
 
     <script src="./movies.js"></script>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
