fix details page

--- a/details.html
+++ b/details.html
@@ -15,14 +15,14 @@
         </div>
         <nav class="flex items-center w-4/12 justify-center">
             <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF] " href="./index.html">Home</a>
-            <a class="p-2 border border-black rounded-md m-1.5 font-bold bg-[#D2CCFF]" href="./movies.html">Movies</a>
-            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="">Favs</a>
+            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="./movies.html">Movies</a>
+            <a class="p-2 border border-black rounded-md m-1.5 font-medium hover:bg-[#D2CCFF]" href="./favs.html">Favs</a>
         </nav>
     </div>
     <main id="main"></main>
 
 
-    <script src="./movies.js"></script>
+
     <script src="./details.js"></script>
 </body>
 </html>
